--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/proxy": "^1.3.3",
+    "nuxt": "^2.0.0",
+    "vue-material": "^1.0.0-beta-11"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "node-sass": "^4.12.0",
+    "nodemon": "^1.18.9",
+    "sass-loader": "^7.1.0"
   }
 }
