--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/proxy": "^1.3.3",
     "firebase": "^6.3.3",
+    "js-cookie": "^2.2.0",
     "md5": "^2.2.1",
     "nuxt": "^2.0.0",
     "vue-material": "^1.0.0-beta-11",
