--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.5.4",
     "@nuxtjs/proxy": "^1.3.3",
+    "core-js": "^2.6.9",
     "firebase": "^6.3.3",
     "js-cookie": "^2.2.0",
     "md5": "^2.2.1",
     "nuxt": "^2.0.0",
+    "slugify": "^1.3.4",
+    "uuid": "^3.3.2",
     "vue-material": "^1.0.0-beta-11",
     "vuelidate": "^0.7.4"
   },
